--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,11 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
 <html>
 <body>
   <header>
-    <h1></h1>
-
+    <h1>The Tiny App</h1>
   </header>
-
-
-
 </body>
 </html>
