--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
 <html lang="en">
-<% includes _header.ejs%>
 <head>
   <title>TinyApp</title>
 </head>
 <body>
+  <header>
+  <%- include partials/_header.ejs%>
+</header>
   <table>
     <thead>
       <tr>
