--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html lang="en">
-<% includes _header.ejs%>
-
 <head>
   <title>TinyApp</title>
 </head>
 <body>
+  <header>
+    <%- include partials/_header.ejs %>
+  </header>
   <%=shortURL%>
   <%=longURL%>
 </body>
