--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -15,10 +15,14 @@
       </tr>
     </thead>
     <tbody>
-      <% for(shortUrl in urls){%>
+      <% for(shortURL in urls){%>
       <tr>
-        <td><%=shortUrl%></td>
-        <td><%=urls[shortUrl]%></td>
+        <td><%=shortURL%></td>
+        <td><%=urls[shortURL]%></td>
+        <td> <form method="POST" action="/urls/<%=shortURL%>/delete">
+          <input type="submit" value="Delete"/>
+        </form>
+        </td>
       </tr>
       <% } %>
       <tr>
