--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -7,7 +7,13 @@
   <header>
     <%- include partials/_header.ejs %>
   </header>
-  <%=shortURL%>
-  <%=longURL%>
+        <h2><%=shortURL%></h2>
+  <form action="/urls/<%=shortURL%>" method="POST">
+    <div>
+      <label for="newlongURL"> long URL: </label>
+      <input type="text" name="longURL" value="<%=longURL%>"/>
+    </div>
+    <input type="submit" value="Update"/>
+      </form>
 </body>
 </html>
