--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,6 +19,7 @@
       <tr>
         <td><%=shortURL%></td>
         <td><%=urls[shortURL]%></td>
+        <td><a href="/urls/<%=shortURL%>">Edit</a></td>
         <td> <form method="POST" action="/urls/<%=shortURL%>/delete">
           <input type="submit" value="Delete"/>
         </form>
