--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -11,7 +11,7 @@
   <form action="/urls/<%=shortURL%>" method="POST">
     <div>
       <label for="newlongURL"> long URL: </label>
-      <input type="text" name="longURL" value="<%=longURL%>"/>
+      <input type="text" name="longURL" value=""/>
     </div>
     <input type="submit" value="Update"/>
       </form>
