added user registration

--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -6,13 +6,6 @@
     <h1>The Tiny App</h1>
      <h3> Log in here:</h3>
   </header>
- <% if (user ) {%>
-  <form action = "/logout" method ="POST">
-    <div>Welcome, <%= user.id %> </div>
-    <input type="submit" name="logout" value="Sign Out"/>
-  </form>
-
-    <% } else { %>
   <form action="/login" method="POST">
 
     <div>
@@ -24,9 +17,8 @@
       <input type="text" name= "userPassword" value=""/>
     </div>
     <div>
-    <input type="submit" name="" value="Sign In".>
+    <input type="submit" name="" value="Sign In"/>
     </div>
-    <% } %>
   </form>
 </body>
 </html>
