--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,18 +5,18 @@
   <header>
     <h1>The Tiny App</h1>
   </header>
- <% if (user) {%>
+  <% if (user) { %>
+  <div> Hello, <%= user.id %> </div>
   <form action = "/logout" method ="POST">
-    <div>Welcome, <%= user %> </div>
-    <input type="submit" name="logout" value="Sign Out"/>
+    <input type="submit" value="Log Out"/>
   </form>
     <% } else { %>
-        <td colSpan="2">
+        <div>
           <a href= "/register">Register</a>
-        </td>
-        <td colSpan="2">
+      </div>
+      <div>
           <a href= "/login">Log In</a>
-        </td>
+        </div>
     <% } %>
   </form>
 </body>
