--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -20,5 +20,9 @@
     <input type="submit" name="" value="Sign In"/>
     </div>
   </form>
+  <div>
+    <a href="/register">Don't have an acount? Register a new account.</a>
+  </div>
+
 </body>
 </html>
