--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -15,5 +15,9 @@
     </div>
     <input type="submit" value="Update"/>
       </form>
+      <div>
+        <a href="/urls">Back to your list. </a>
+
+      </div>
 </body>
 </html>
