--- a/views/400.ejs
+++ b/views/400.ejs
@@ -2,11 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>404 Not Found</title>
+    <title>400 Bad Request</title>
   </head>
   <body>
     <h3>The requested resource was not found</h3>
 
-    <a href="/urls">Back to homepage</a>
+    <a href="/urls">Back to the list. </a>
   </body>
 </html>
