Bug and typo fixed.

--- a/views/403.ejs
+++ b/views/403.ejs
@@ -5,12 +5,12 @@
     <title>403 Forbidden</title>
   </head>
   <body>
-    <h3>You need to login to access the following page. </h3>
+    <h3>Access to this page has been restricted by server. </h3>
 <div>
     <a href="/login">Go to login page.</a>
   </div>
   <div>
-    <a href="/register">Don't have an acount? Register a new account.</a>
+    <a href="/register">Don't have an account? Register a new account.</a>
   </div>
   </body>
 </html>
