--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -14,14 +14,14 @@
     </div>
     <div>
       <label for = "userPassword">Password: </label>
-      <input type="text" name= "userPassword" value=""/>
+      <input type="password" name= "userPassword" value=""/>
     </div>
     <div>
     <input type="submit" name="" value="Sign In"/>
     </div>
   </form>
   <div>
-    <a href="/register">Don't have an acount? Register a new account.</a>
+    <a href="/register">Don't have an account? Register a new account.</a>
   </div>
 
 </body>
